# flashed

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/shaders/: alpha.fs  alpha_discard.fs  flashcard.fs
assets/shaders/templates/: template_fragment.fs  template_vertex.vs
data/: example.hld
data/cards/: test.hld
data/codepoints/: EN.hlcp  KR.hlcp  KR_Jamo.hlcp  KR_JamoExtendedA.hlcp  KR_JamoExtendedB.hlcp  KR_Syllables.hlcp  README.txt
decks/: example.hld  test.hdk
src/: main.c
src/core/: GLOBALS.h  Helium.c  Helium.h
src/instance/: HlAnimation.c  HlAnimation.h  HlDialog.c  HlDialog.h  HlSprite.c  HlSprite.h
src/states/: FlashState.c  FlashState.h  MenuState.c  MenuState.h  TemplateState.c  TemplateState.h
src/states/engine/: HlErrorState.c  HlErrorState.h  HlInitState.c  HlInitState.h
src/util/: FSUtil.c  FSUtil.h  Hl2DUtil.c  Hl2DUtil.h  HlData.c  HlData.h  HlEase.c  HlEase.h  HlList.c  HlList.h  HlUtils.c  HlUtils.h
